--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -113,10 +113,11 @@
       padding: 0
       background: $dark
       &__wrap
-        margin-top: 0
+        
         background: $dark
       &__map
         width: 100%  
+        margin: unset
           
                                  
 @media screen and ( max-width: 570px )
